not final verison

--- a/public/campaign-details-page.html
+++ b/public/campaign-details-page.html
@@ -29,7 +29,7 @@
             <main class="container">
                 <div class="row">
                     <div class=" col-lg-8">
-                        <img class="container rounded-3 p-0"
+                        <img id="imgCampian" class="container rounded-3 p-0"
                             src="./assets/image/imgCard.svg">
                         <p id="descriptionCampaign"
                             class="container font-gray-400-16 white-space-preline">
@@ -99,7 +99,7 @@
                             </div>
 
                         </section>
-                        <section class="card mt-2">
+                        <section id="sectionFund" class="card mt-2">
                             <p class="card-title font-black-600-18">
                                 💪 Fund this campaign
                             </p>
@@ -111,7 +111,7 @@
                                 <p class="my-2 font-black-600-14">Not only numbers make the difference on
                                     our lives</p>
 
-                                    <input class="btn" type="button" value="Donate now">
+                                    <input id="btnDonate" class="btn" type="button" value="Donate now">
                             </div>
 
                             
