--- a/public/compaignDashBoard.html
+++ b/public/compaignDashBoard.html
@@ -6,8 +6,7 @@
     <title>Campaign Dashboard</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="yourCompaign-dashboard.css" />
   </head>
@@ -27,16 +26,13 @@
               <li class="nav-item">
                 <a
                   class="nav-link"
-                  href="http://localhost:3000/yourCompaign.html"
-                  >Your Campaign</a
-                >
+                  href="http://localhost:3000/compaignDashBoard.html">Campaigns</a>
               </li>
               <li class="nav-item">
                 <a
                   class="nav-link"
-                  href="http://localhost:3000/createCampaign.html"
-                  >Create Campaign</a
-                >
+                  href="http://localhost:3000/createCampaign.html">Create
+                  Campaign</a>
               </li>
             </ul>
           </nav>
@@ -54,16 +50,16 @@
             <h2 class="section-title">Active</h2>
             <h2 class="mx-1 text-dark">Campaigns</h2>
           </div>
-
+          <div class="alert alert-warning" role="alert"></div>
           <div
             id="divCampaigns"
-            class="row g-4 mb-5 dashboard__active__body"
-          ></div>
+            class="row g-4 mb-5 dashboard__active__body"></div>
         </div>
       </div>
     </section>
     <!-- end Dashboard  -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="campain-dashbord-main.js"></script>
   </body>
 </html>
