--- a/public/login.html
+++ b/public/login.html
@@ -45,7 +45,7 @@
         <div class="row">
           <div class="col-sm-6 text-black">
             <div class="px-5 ms-xl-4 logIn__logo">
-              <img src=".//assets/icon/logo.svg" alt="logo image" />
+              <img src="./assets/icon/logo.svg" alt="logo image" />
             </div>
 
             <div
