--- a/public/yourCompaign.html
+++ b/public/yourCompaign.html
@@ -27,19 +27,10 @@
               <li class="nav-item">
                 <a
                   class="nav-link"
-                  href="http://localhost:3000/yourCompaign.html"
-                  >Your Campaign</a
+                  href="http://localhost:3000/compaignDashBoard.html"
+                  >Campaigns</a
                 >
-              </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link active"
-                  aria-current="page"
-                  href="http://localhost:3000/dashboard-admin-page.html"
-                  >Dashboard</a
-                >
-              </li>
-
+              </li> 
               <li class="nav-item">
                 <a
                   class="nav-link"
@@ -79,9 +70,9 @@
 
         <!-- Campaign Card -->
         <div class="card mb-5 yourCampaigns__container">
-          <img
+          <img id="imageCampaign"
             src="./assets/image/your-campaign.png"
-            class="card-img-top"
+            class="card-img-top h-25"
             alt="EV Startup"
           />
 
