--- a/public/compaignDashBoard.html
+++ b/public/compaignDashBoard.html
@@ -34,6 +34,12 @@
                   href="http://localhost:3000/createCampaign.html">Create
                   Campaign</a>
               </li>
+              <li class="nav-item">
+                <a id="btnLogout"
+                  class="nav-link"
+                  aria-disabled="true"
+                  href="http://localhost:3000/profile.html">Log out</a>
+              </li>
             </ul>
           </nav>
         </header>
