--- a/public/yourCompaign.html
+++ b/public/yourCompaign.html
@@ -38,6 +38,13 @@
                   >Create Campaign</a
                 >
               </li>
+
+              <li class="nav-item">
+                <a id="btnLogout"
+                  class="nav-link"
+                  aria-disabled="true"
+                  href="http://localhost:3000/profile.html">Log out</a>
+              </li>
             </ul>
           </nav>
         </header>
